# cli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  config.toml
.github/workflows/: ci.yml  release.yml
crates/agentpm-cli/: Cargo.toml
crates/agentpm-cli/assets/templates/: agent.json.tpl  tool_agent.json.tpl
crates/agentpm-cli/src/: assets.rs  auth.rs  config.rs  main.rs  prelude.rs
crates/agentpm-cli/src/commands/: init.rs  lint.rs  login.rs  mod.rs  whoami.rs
crates/agentpm-cli/src/io/: fs.rs
crates/agentpm-cli/src/util/: mod.rs  schema_io.rs
crates/agentpm-sdk/: Cargo.toml
crates/agentpm-sdk/src/: client.rs  error.rs  lib.rs  types.rs
schemas/: agentpm.manifest.schema.json
scripts/: install-latest.sh
